# join_me_maybe

./: Cargo.toml  README.md  README.tpl
examples/: bodies.rs  finally.rs  short.rs
impl/: Cargo.toml  README.md
impl/src/: lib.rs
src/: lib.rs  maybe_done.rs
tests/: no_std.rs  test.rs
tests/ui/: all_maybe.rs  all_maybe.stderr  await_in_body.rs  await_in_body.stderr  cancel_self.rs  cancel_self.stderr  missing_capture.rs  missing_capture.stderr  non_send_canceller.rs  non_send_canceller.stderr  repeat_labels.rs  repeat_labels.stderr  return_unreachable.rs  return_unreachable.stderr  stream_bodies_return_unit.rs  stream_bodies_return_unit.stderr  unreachable_code_warnings.rs  unreachable_code_warnings.stderr  unused_label.rs  unused_label.stderr
