[package]
name = "join_me_maybe"
version = "0.1.0"
authors = ["Jack O'Connor <oconnor663@gmail.com>"]
description = "halfway between `join!` and `select!`"
repository = "https://github.com/oconnor663/join_me_maybe"
license = "Apache-2.0 OR MIT"
documentation = "https://docs.rs/join_me_maybe"
readme = "README.md"
edition = "2024"

[dependencies]
join_me_maybe_impl = { version = "0.1.0", path = "impl" }
futures = { version = "0.3.31", default-features = false }
pin-project-lite = "0.2.16"

[dev-dependencies]
futures = { version = "0.3" } # with default features, for `FuturesUnordered`
tokio = { version = "1.48.0", features = ["full"] }
tokio-stream = "0.1.17"
trybuild = "1.0.114"
