[package]
name = "join_me_maybe"
version = "0.4.0"
authors = ["Jack O'Connor <oconnor663@gmail.com>"]
description = "an async `join!` macro with `select!`-like features"
repository = "https://github.com/oconnor663/join_me_maybe"
license = "Apache-2.0 OR MIT"
documentation = "https://docs.rs/join_me_maybe"
readme = "README.md"
edition = "2024"

[dependencies]
join_me_maybe_impl = { version = "0.4", path = "impl" }
futures = { version = "0.3.31", features = ["async-await"], default-features = false }
atomic_refcell = "0.1.13"

[dev-dependencies]
futures = { version = "0.3" } # with default features, for `FuturesUnordered`
tokio = { version = "1.48.0", features = ["full"] }
tokio-stream = "0.1.17"
trybuild = "1.0.114"
